--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "ConnetionStrings": {
-    "DeafulatConnection": "Data Source=reactivities.db"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=reactivities.db"
   }
 }
